--- a/example.env
+++ b/example.env
@@ -6,3 +6,4 @@ KTH_RP_ORIGIN=http://localhost:7000
 ORIGIN=http://localhost:7000
 PORT=7000
 DATABASE_URL=postgresql://logout:logout@localhost:5432/logout
+# LDAP_PROXY_URL=
