--- a/example.env
+++ b/example.env
@@ -7,3 +7,4 @@ ORIGIN=http://localhost:7000
 PORT=7000
 DATABASE_URL=postgresql://logout:logout@localhost:5432/logout
 # LDAP_PROXY_URL=
+DIST_DIR=./dist
