--- a/example.env
+++ b/example.env
@@ -12,3 +12,4 @@ PORT=7000
 DATABASE_URL=postgresql://logout:logout@localhost:5432/logout
 # LDAP_PROXY_URL=
 DIST_DIR=./dist
+# PLS_URL=https://pls.datasektionen.se
