--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "islands",
+  "name": "logout",
   "version": "1.0.0",
   "scripts": {
-    "build": "rollup -c rollup.config.mjs",
     "tailwind": "BROWSERSLIST_IGNORE_OLD_DATA=1 tailwind -i style.css -o dist/style.css",
     "clean": "rm -rf dist/"
   },
@@ -10,16 +9,6 @@
   "type": "module",
   "packageManager": "pnpm@9.1.4+sha512.9df9cf27c91715646c7d675d1c9c8e41f6fce88246f1318c1aa6a1ed1aeb3c4f032fcdf4ba63cc69c4fe6d634279176b5358727d8f2cc1e65b65f43ce2f8bfb0",
   "dependencies": {
-    "@babel/core": "^7.24.6",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "babel-preset-solid": "^1.8.17",
-    "rollup": "^4.18.0",
-    "solid-js": "^1.8.17",
-    "tailwindcss": "^3.4.3",
-    "tslib": "^2.6.2",
-    "typescript": "^5.4.5",
-    "zod": "^3.23.8"
+    "tailwindcss": "^3.4.3"
   }
 }
