--- a/example.env
+++ b/example.env
@@ -9,6 +9,6 @@ OIDC_PROVIDER_KEY=RfPilMxDi59O2r5r5rczTZ1ilNbCLGDqciKRlprzQ17,ztB7NCwnVQak7eIctW
 ORIGIN=http://localhost:7000
 DEV=true
 PORT=7000
-DATABASE_URL=postgresql://logout:logout@localhost:5432/logout
+DATABASE_URL=postgresql://sso:sso@localhost:5432/sso
 # LDAP_PROXY_URL=
 # PLS_URL=https://pls.datasektionen.se
