send email to d-sys when an account request is finished

--- a/example.env
+++ b/example.env
@@ -12,3 +12,6 @@ PORT=7000
 DATABASE_URL=postgresql://sso:sso@localhost:5432/sso
 # LDAP_PROXY_URL=
 # PLS_URL=https://pls.datasektionen.se
+
+# SPAM_URL=https://spam.datasektionen.se
+# SPAM_API_KEY=somethingonlyyouandyourclosestalliesshouldknow
