--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-/pkg/static/public/style.dist.css linguist-vendored
+/pkg/static/public/style.dist.css   linguist-vendored
+*_templ.go                          linguist-vendored
+*.sql.go                            linguist-vendored
