improve error message when hive url or key is missing

--- a/example.env
+++ b/example.env
@@ -12,6 +12,8 @@ PORT=7000
 DATABASE_URL=postgresql://sso:sso@localhost:5432/sso
 # LDAP_PROXY_URL=
 # PLS_URL=https://pls.datasektionen.se
+# HIVE_URL=http://localhost:6869
+# HIVE_API_KEY=
 
 # SPAM_URL=https://spam.datasektionen.se
 # SPAM_API_KEY=somethingonlyyouandyourclosestalliesshouldknow
